--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,41 @@
-Flask
-waitress
+# Flask
+# waitress
 
 flask-cors
+
+
+boto3==1.9.130
+botocore==1.12.130
+cachetools==3.1.0
+certifi==2019.3.9
+chardet==3.0.4
+Click==7.0
+docutils==0.14
+Flask==1.0.2
+google-api-python-client==1.7.8
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.3.0
+httplib2==0.12.1
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jmespath==0.9.4
+MarkupSafe==1.1.1
+oauthlib==3.0.1
+pyasn1==0.4.5
+pyasn1-modules==0.2.4
+PyPDF2==1.26.0
+python-dateutil==2.8.0
+requests==2.21.0
+requests-oauthlib==1.2.0
+rsa==4.0
+s3transfer==0.2.0
+six==1.12.0
+uritemplate==3.0.0
+urllib3==1.24.1
+waitress==1.2.1
+Werkzeug==0.15.2
+
 
 
