--- a/deployment.yml
+++ b/deployment.yml
@@ -1,36 +1,36 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: oip-invite
+  name: oip-invite-prod
 spec:
   ports:
   - port: 80
     targetPort: 8080
   selector:
-    app: oip-invite
+    app: oip-invite-prod
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: oip-invite
+  name: oip-invite-prod
 spec:
   selector:
     matchLabels:
-      app: oip-invite
+      app: oip-invite-prod
   replicas: 1
   template:
     metadata:
       labels:
-        app: oip-invite
+        app: oip-invite-prod
     spec:
       containers:
-      - name: oip-invite
-        image: socialalphaoip/user-invite-microservice:dev
+      - name: oip-invite-prod
+        image: socialalphaoip/user-invite-microservice:prod
         ports:
         - containerPort: 8080
         env:
           - name: HASURA_GRAPHQL_URL
-            value: https://sa-dev.dev.jaagalabs.com/v1/graphql
+            value: http://oip-hasura-prod/v1/graphql
           - name: HASURA_GRAPHQL_ADMIN_SECRET
             value: 1SocialAlpha
 ---
